[package]
name = "cubob"
version = "0.3.0"
edition = "2018"
authors = ["Artyom Sakharilenko <kryvashek@gmail.com>"]
description = "Structured output helpers for display mode "
repository = "https://github.com/kryvashek/cubob"
license = "MIT"
keywords = ["output", "display", "structure", "pretty"]
categories = ["command-line-interface", "no-std", "rust-patterns"]

[lib]
crate-type = ["staticlib", "rlib"]

[dev-dependencies]
maplit = "1.0.2"
