[package]
name = "cubob"
version = "1.2.0"
edition = "2018"
authors = ["Artyom Sakharilenko <kryvashek@gmail.com>"]
description = "Structured output helpers for display mode "
repository = "https://github.com/kryvashek/cubob"
license = "MIT"
keywords = ["output", "display", "structure", "pretty"]
categories = ["command-line-interface", "no-std", "rust-patterns"]

[lib]
crate-type = ["staticlib", "rlib"]

[dev-dependencies]
maplit = "1.0.2"

[features]
default = ["field", "list", "struct"]

embed = []
field = []
instant = []
list = []
struct = []
