[package]
name = "cubob"
version = "1.3.3"
edition = "2018"
authors = ["Artyom Sakharilenko <kryvashek@gmail.com>"]
description = "Structured output helpers for display mode "
repository = "https://github.com/kryvashek/cubob"
license = "MIT"
keywords = ["output", "display", "structure", "pretty"]
categories = ["command-line-interface", "no-std", "rust-patterns"]

[lib]
crate-type = ["staticlib", "rlib"]

[dev-dependencies]
maplit = "1.0.2"

[features]
default = ["field", "list", "struct"]

embed = []
field = []
instant = []
list = []
struct = []
custom = []
params = []
path = ["params"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
